# psychic-guacamole

./: .gitignore  CMakeLists.txt  main.cpp  setup.md
include/: Vector3.hpp  base.hpp  window.hpp
src/: Vector3.cpp  main.cpp  shapes.cpp  triangle.cpp  window.cpp
